# 07-taotie

./: .rustfmt.toml  Cargo.toml  _typos.toml  deny.toml
examples/: arrow-serde.rs  ndjson.rs  pq.rs  repl.rs
notebooks/: pyproject.toml  taotie.ipynb
src/: lib.rs  main.rs
src/backend/: data_fusion.rs  mod.rs
src/backend/fusion/: describe.rs  df_describe.rs
src/cli/: connect.rs  describe.rs  head.rs  list.rs  mod.rs  schema.rs  sql.rs
